--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ node_modules
 dist
 secrets
 .env
+/*.zip
+/dump/
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos
 
