--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "@jpapi/server",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -9,8 +9,17 @@
     "build": "tsc -P src/tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "japanese",
+    "openapi",
+    "swagger",
+    "mecab"
+  ],
+  "author": {
+    "email": "polv@polv.cc",
+    "name": "Pacharapol Withayasakpunt",
+    "url": "https://polv.cc"
+  },
   "license": "ISC",
   "dependencies": {
     "@typegoose/typegoose": "^7.0.0",
@@ -33,5 +42,10 @@
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3",
     "xregexp": "^4.3.0"
+  },
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x",
+    "yarn": "please-use-npm"
   }
 }
