✨ Feat: rely on Heroku and Cloudflare, for deployment

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "docker run -e MONGO_URI -p 8080:8080 patarapolw/jpapi",
     "build": "docker build -t patarapolw/jpapi .",
-    "gcr": "docker tag patarapolw/jpapi gcr.io/$PROJECT_ID/jpapi && docker push gcr.io/$PROJECT_ID/jpapi",
+    "heroku:push": "heroku container:push web",
+    "heroku:release": "heroku container:release web",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
