--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jpapi",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "docker run -e MONGO_URI -p 8080:8080 patarapolw/jpapi",
     "build": "docker build -t patarapolw/jpapi .",
+    "push": "docker push patarapolw/jpapi",
     "heroku:push": "heroku container:push web",
     "heroku:release": "heroku container:release web",
     "test": "echo \"Error: no test specified\" && exit 1"
