--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "fastify": "^2.14.0",
     "fastify-cors": "^3.0.3",
     "fastify-oas": "^2.6.2",
+    "fastify-rate-limit": "^3.0.1",
     "mecab-lite": "0.0.8",
     "mongoose": "^5.9.10",
     "pino-pretty": "^4.0.0"
